--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+
 
 def configuration = rootProject.ext.configuration
 def libraries = rootProject.ext.libraries
@@ -36,4 +38,14 @@ dependencies {
     testImplementation "junit:junit:${libraries.junitVersion}"
     androidTestImplementation "androidx.test:runner:${libraries.androidxRunnerVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-core:${libraries.androidxEspressoVersion}"
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation "androidx.paging:paging-runtime:2.1.2"
+
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    implementation "com.github.bumptech.glide:compiler:4.12.0"
+}
+repositories {
+    mavenCentral()
 }
