--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 
     implementation "com.github.bumptech.glide:glide:4.12.0"
     implementation "com.github.bumptech.glide:compiler:4.12.0"
+
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
 }
 repositories {
     mavenCentral()
